--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -108,7 +108,7 @@
                                     'type': 'select',
                                     'name': 'recaptcha',
                                     'args': {
-                                        'option': {'yes':'Да', 'no':'Нет'},
+                                        'option': _(['yes', 'no']),
                                         'selected': item.recaptcha ? 'yes' : 'no'
                                     }
                                 } %}
