--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -100,7 +100,7 @@
                                             'type': 'select',
                                             'name': 'children',
                                             'args': {
-                                                'option': {'yes':'Да', 'no':'Нет'},
+                                                'option': _(['yes', 'no']),
                                                 'selected': category.children ? 'yes' : 'no'
                                             }
                                         } %}
@@ -122,7 +122,7 @@
                                             'type': 'select',
                                             'name': 'sort[by]',
                                             'args': {
-                                                'option': collect(reference('/App/Domain/References/Catalog::ORDER_BY')).combine(['Заголовок', 'Цена', 'Наличие', 'Дата']),
+                                                'option': _(reference('/App/Domain/References/Catalog::ORDER_BY')),
                                                 'selected': category.sort['by'] ?? parameter('catalog_sort_by', 'title')
                                             }
                                         } %}
@@ -133,8 +133,8 @@
                                             'type': 'select',
                                             'name': 'sort[direction]',
                                             'args': {
-                                                'option': collect(reference('/App/Domain/References/Catalog::ORDER_DIRECTION')).combine(['По возрастанию', 'По убыванию']),
-                                                'selected': category.sort['direction'] ?? parameter('catalog_sort_direction', 'asc')
+                                                'option': _(reference('/App/Domain/References/Catalog::ORDER_DIRECTION')),
+                                                'selected': category.sort['direction'] ?? parameter('catalog_sort_direction', 'ASC')
                                             }
                                         } %}
                                     </div>
