remove older resources

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -3,7 +3,7 @@
 {% block title %}ЦУП CMS{% endblock %}
 
 {% block head %}
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
+    {% resource 'font-awesome:all.min.css' '5.15.3' %}
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css?v={{ sha }}">
     <link rel="stylesheet" href="/assets/css/datatables.min.css?v={{ sha }}">
     <link rel="stylesheet" href="/assets/js/plugin/jquery.modal/jquery.modal.min.css?v={{ sha }}">
