--- a/theme/default/user.login.twig
+++ b/theme/default/user.login.twig
@@ -5,86 +5,88 @@
 {% block head %}
     {{ parent() }}
 
-    <style>
-        body {
-            background: #007bff;
-            background: linear-gradient(to right, #0062E6, #33AEFF);
-        }
+    {% htmlcompress %}
+        <style>
+            body {
+                background: #007bff;
+                background: linear-gradient(to right, #0062E6, #33AEFF);
+            }
 
-        .card-signin {
-            border: 0;
-            border-radius: 1rem;
-            box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
-        }
+            .card-signin {
+                border: 0;
+                border-radius: 1rem;
+                box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+            }
 
-        .card-signin .card-title {
-            margin-bottom: 2rem;
-            font-weight: 300;
-            font-size: 1.5rem;
-        }
+            .card-signin .card-title {
+                margin-bottom: 2rem;
+                font-weight: 300;
+                font-size: 1.5rem;
+            }
 
-        .card-signin .card-body {
-            padding: 2rem;
-        }
+            .card-signin .card-body {
+                padding: 2rem;
+            }
 
-        .form-signin {
-            width: 100%;
-        }
+            .form-signin {
+                width: 100%;
+            }
 
-        .form-signin .btn {
-            border-radius: 5rem;
-            letter-spacing: .1rem;
-            font-weight: bold;
-            transition: all 0.2s;
-            font-size: 15px;
-            padding: 15px 0 10px 0;
-        }
+            .form-signin .btn {
+                border-radius: 5rem;
+                letter-spacing: .1rem;
+                font-weight: bold;
+                transition: all 0.2s;
+                font-size: 15px;
+                padding: 15px 0 10px 0;
+            }
 
-        .form-label-group {
-            position: relative;
-            margin-bottom: 1rem;
-        }
+            .form-label-group {
+                position: relative;
+                margin-bottom: 1rem;
+            }
 
-        .form-label-group input {
-            height: auto;
-            border-radius: 2rem;
-        }
+            .form-label-group input {
+                height: auto;
+                border-radius: 2rem;
+            }
 
-        .form-label-group>label {
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: block;
-            width: 100%;
-            margin-bottom: 0;
-            /* Override default `<label>` margin */
-            line-height: 1.5;
-            color: #495057;
-            border: 1px solid transparent;
-            border-radius: .25rem;
-            transition: all .1s ease-in-out;
-        }
+            .form-label-group>label {
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: block;
+                width: 100%;
+                margin-bottom: 0;
+                /* Override default `<label>` margin */
+                line-height: 1.5;
+                color: #495057;
+                border: 1px solid transparent;
+                border-radius: .25rem;
+                transition: all .1s ease-in-out;
+            }
 
-        .form-label-group input::-webkit-input-placeholder {
-            color: transparent;
-        }
+            .form-label-group input::-webkit-input-placeholder {
+                color: transparent;
+            }
 
-        .form-label-group input:-ms-input-placeholder {
-            color: transparent;
-        }
+            .form-label-group input:-ms-input-placeholder {
+                color: transparent;
+            }
 
-        .form-label-group input::-ms-input-placeholder {
-            color: transparent;
-        }
+            .form-label-group input::-ms-input-placeholder {
+                color: transparent;
+            }
 
-        .form-label-group input::-moz-placeholder {
-            color: transparent;
-        }
+            .form-label-group input::-moz-placeholder {
+                color: transparent;
+            }
 
-        .form-label-group input::placeholder {
-            color: transparent;
-        }
-    </style>
+            .form-label-group input::placeholder {
+                color: transparent;
+            }
+        </style>
+    {% endhtmlcompress %}
 {% endblock %}
 
 {% block bodyinner %}
@@ -130,6 +132,20 @@
                             </div>
 
                             <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Войти</button>
+
+                            <hr>
+
+                            <div class="row d-flex justify-content-center">
+                                {% for type in ['facebook', 'vk'] %}
+                                    {% if parameter('user_auth_' ~ type ~ '_is_enabled', 'no') == 'yes' %}
+                                        <div class="col-4">
+                                            <a href="{{ oauth_url(type) }}" class="btn btn-icon btn-block btn-info">
+                                                <i class="fab fa-{{ type }}" style="font-size:x-large;"></i>
+                                            </a>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
                         </form>
                     </div>
                 </div>
