--- a/theme/default/user.profile.twig
+++ b/theme/default/user.profile.twig
@@ -76,6 +76,8 @@
                                         'value': user.additional
                                     }
                                 } %}
+
+                                {% include 'user.profile.social.twig' %}
                             </div>
                             <div class="col-12 col-md-6">
                                 {% include 'mixin/form.twig' with {
