--- a/theme/default/common/user.switch.twig
+++ b/theme/default/common/user.switch.twig
@@ -4,9 +4,7 @@
     {% if user == false %}
         <a href="/user/login">Вход</a> или <a href="/user/register">Регистрация</a>
     {% else %}
-        <a href="/user/profile" style="text-decoration: underline;">
-            {{ user.getName('short')?? user.username }}
-        </a>
+        <a href="/user/profile" style="text-decoration: underline;">{{ user.getName('short')?? user.username }}</a>
 
         {% if user.group and 'cup:main' in user.group.access %}
             или
