fix order form design

--- a/src/Template/cup/form-save.twig
+++ b/src/Template/cup/form-save.twig
@@ -1,4 +1,4 @@
-<button type="submit" name="save" value="exit" class="btn btn-primary">
+<button type="submit" name="save" value="exit" class="btn btn-primary" style="height: 40px;">
     Сохранить
 </button>
 <button type="submit" name="save" class="btn btn-info btn-icon">
